--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   ############################################################
   # 💾 LOCAL STORAGE / PERSISTENCE
   ############################################################
-#  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.2
   get_storage: ^2.1.1
   # hive_flutter: ^1.1.0
   # sqflite: ^2.3.2
