--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   graphic: ^2.6.0
   fl_chart:
   carousel_slider: ^5.1.1
+  bottom_picker: ^4.1.0
   ############################################################
   # ⚙️ STATE MANAGEMENT
   ############################################################
@@ -56,6 +57,8 @@ dependencies:
   crypto: ^3.0.6
   platform_device_id_plus: ^1.0.7
   number_to_words:
+  package_info_plus: ^8.1.3
+  super_tooltip: ^2.1.0
   # logger: ^2.0.2+1
 #  platform_device_id:
 #    git:
