--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   ############################################################
   # 🧱 UI / DESIGN
   ############################################################
@@ -29,6 +28,11 @@ dependencies:
   carousel_slider: ^5.1.1
   bottom_picker: ^4.1.0
   interactive_bottom_sheet: ^1.1.0
+  flutter_advanced_switch: ^3.1.0
+  flutter_advanced_drawer: ^1.5.0
+  material_icons_named: ^3.16.0+2
+  lottie:
+  animated_switcher_plus: ^1.3.0
   ############################################################
   # ⚙️ STATE MANAGEMENT
   ############################################################
@@ -37,15 +41,19 @@ dependencies:
   ############################################################
   # 🌐 NETWORK / API
   ############################################################
-  # dio: ^5.4.0
+  flutter_inappwebview: ^6.0.0
   http: ^1.2.1
   connectivity_plus: ^6.1.4
-
   ############################################################
   # 💾 LOCAL STORAGE / PERSISTENCE
   ############################################################
   shared_preferences: ^2.2.2
   get_storage: ^2.1.1
+  permission_handler: ^12.0.0+1
+  file_downloader_flutter: ^0.0.5
+  path_provider: ^2.1.5
+#  flutter_file_downloader: ^2.0.0
+#  flutter_downloader: ^1.11.6
   # hive_flutter: ^1.1.0
   # sqflite: ^2.3.2
 
@@ -61,6 +69,8 @@ dependencies:
   super_tooltip: ^2.1.0
   geocoding: ^4.0.0
   geolocator: 13.0.2
+  syncfusion_flutter_calendar: ^29.1.38
+  flutter_spinkit: ^5.2.0
   # logger: ^2.0.2+1
 #  platform_device_id:
 #    git:
@@ -99,6 +109,7 @@ flutter:
     - assets/icons/bottom_nav/
     - assets/icons/action/
     - assets/icons/common/
+    - assets/lotties/
 
   ############################################################
   # 🔤 FONTS
