--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ dependencies:
   geolocator: 13.0.2
   syncfusion_flutter_calendar: ^29.1.38
   flutter_spinkit: ^5.2.0
-
+  auto_size_text: ^3.0.0
   # logger: ^2.0.2+1
 #  platform_device_id:
 #    git:
