fix: 1. Bottom Padding for task list 2. Drawer Auto size text for username 3. Appbar switch profile pic update 4. Attendance widget rework

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_number_flow: ^0.1.0
   dropdown_button2: ^2.3.9
   easy_date_timeline: ^2.0.9
+  one_clock:
   ############################################################
   # ⚙️ STATE MANAGEMENT
   ############################################################
