--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   file_downloader_flutter: ^0.0.5
   path_provider: ^2.1.5
+  flutter_secure_storage: ^9.2.4
+
   #  flutter_file_downloader: ^2.0.0
   #  flutter_downloader: ^1.11.6
   # hive_flutter: ^1.1.0
