--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   material_icons_named: ^3.16.0+2
   lottie:
   animated_switcher_plus: ^1.3.0
-  flutter_number_flow: ^0.1.0
+  # flutter_number_flow: ^0.1.0
+  animated_flip_counter: ^0.3.4
   dropdown_button2: ^2.3.9
   easy_date_timeline: ^2.0.9
   one_clock:
