feature : Active List added with filter and bulk action && Task details History been updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   easy_date_timeline: ^2.0.9
   one_clock:
   flutter_heatmap_calendar: ^1.0.5
+  flutter_expanded_tile: ^0.4.0
   # slider_button: ^2.1.0
   ############################################################
   # ⚙️ STATE MANAGEMENT
