--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_advanced_switch: ^3.1.0
   flutter_advanced_drawer: ^1.5.0
   material_icons_named: ^3.16.0+2
+  material_symbols_icons: ^4.2805.0
   lottie:
   animated_switcher_plus: ^1.3.0
   # flutter_number_flow: ^0.1.0
