--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   one_clock:
   flutter_heatmap_calendar: ^1.0.5
   flutter_expanded_tile: ^0.4.0
+  flutter_slidable: ^4.0.3
   # slider_button: ^2.1.0
   ############################################################
   # ⚙️ STATE MANAGEMENT
