--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
   icons_plus: ^5.0.0
-  pinput: ^5.0.1
+  pinput: ^6.0.1
   skeletonizer:
   animated_toggle_switch: ^0.8.5
   load_switch: ^2.2.0
@@ -53,7 +53,7 @@ dependencies:
   ############################################################
   flutter_inappwebview: ^6.0.0
   http: ^1.2.1
-  connectivity_plus: ^6.1.4
+  connectivity_plus: ^7.0.0
   background_location_tracker: ^1.4.3
   location:
   ############################################################
@@ -64,7 +64,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   file_downloader_flutter: ^0.0.5
   path_provider: ^2.1.5
-  flutter_secure_storage: ^9.2.4
+  flutter_secure_storage: ^10.0.0
 
   #  flutter_file_downloader: ^2.0.0
   #  flutter_downloader: ^1.11.6
@@ -75,12 +75,12 @@ dependencies:
   # 🔥 FIREBASE
   ############################################################
   flutter_local_notifications: ^19.2.1
-  firebase_messaging: ^15.2.4
-  firebase_core: ^3.12.1
+  firebase_messaging: ^16.0.4
+  firebase_core: ^4.2.1
   ############################################################
   # 🧰 UTILITIES & HELPERS
   ############################################################
-  intl: ^0.19.0
+  intl: ^0.20.2
   uuid: ^4.5.1
   crypto: ^3.0.6
   platform_device_id_plus: ^1.0.7
@@ -88,8 +88,8 @@ dependencies:
   package_info_plus: ^8.1.3
   super_tooltip: ^2.1.0
   geocoding: ^4.0.0
-  geolocator: 13.0.2
-  syncfusion_flutter_calendar: ^29.1.38
+  geolocator: ^14.0.2
+  syncfusion_flutter_calendar: ^31.2.18
   flutter_spinkit: ^5.2.0
   auto_size_text: ^3.0.0
   # logger: ^2.0.2+1
@@ -104,7 +104,7 @@ dev_dependencies:
   ############################################################
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
   ############################################################
   # 🧪 MOCKING & CODE GENERATION
