--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,12 +26,30 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera permission is requires to scan the QR Code</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Need permission for accessing the work site local network</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app may need your location even in the background for enhanced functionality or due to SDK requirements.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app may require your location while in use to support certain features or SDKs.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need permission for access gallery for QR Code</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
